// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabValidators shows a list of validators 1`] = `
<div>
  <tablevalidators-stub
    showonmobile="expectedReturns"
    validators="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`TabValidators shows a message if still loading 1`] = `
<div>
  <tmdataloading-stub
    title="Data is loading…"
  />
</div>
`;

exports[`TabValidators shows a message if there is nothing to display 1`] = `
<div>
  <tmdataempty-stub
    icon="info_outline"
  />
</div>
`;
